fix(webcomponents->dropdownbutton): fixed sizing across screens
Also added new options "maxTextLength" and "defaultOptionId". The former is to control the maximum
length of text before it gets cut off and the latter is to set something other than the 0th option
as the default - useful when the 0th entry gets disabled

--- a/packages/webcomponents/src/Dropdownbutton/Dropdownbutton.scss
+++ b/packages/webcomponents/src/Dropdownbutton/Dropdownbutton.scss
@@ -1,8 +1,21 @@
-.buttonOverwrites {
+/* stylelint-disable value-no-vendor-prefix */
+.buttonOverwritesLeft {
+  margin-right: 0 !important;
+  width: 100%;
+  width: -moz-available; /* WebKit-based browsers will ignore this. */
+  width: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
+  width: fill-available;
+}
+
+.buttonOverwritesRight {
   margin-right: 0 !important;
 }
 
 .labelOverwrites {
-  justify-content: end;
-  width: 12rem;
+  justify-content: flex-start;
+  width: 100%;
+}
+
+.buttonGroup {
+  width: 100%;
 }
